Add quorum worktree and quorum ui
